# spd_learn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  api.html  contributing.html  faq.html  genindex.html  geometric_concepts.html  glossary.html  index.html  installation.html  notation.html  numerical_stability.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  sg_execution_times.html  sitemap.xml  theory.html  user_guide.html
.github/scripts/: convert_to_notebook.py
.github/workflows/: docs.yml  install-tests.yml
_downloads/016e684357d103c1efff9293d7612c3f/: plot_reeig_animation.py
_downloads/06bf64b50811320d1996301014e032ae/: user_guide-5.py
_downloads/09a536ab907a281ad67ec4903feab488/: spd_learn-modules-WaveletConv-1.py
_downloads/103dec7adc82b59278e319da9f2dacdf/: plot_fmri.ipynb
_downloads/13afb73f55140b0f46681c5b29c0d792/: spd_learn-modules-BiMap-1.py
_downloads/1912ea980888ca442a91e69394428113/: plot_green_wavelets.ipynb
_downloads/1c452f5a007c4f717c330dd3349ee46d/: spd_learn-modules-SPDBatchNormMean-1.py
_downloads/2828e1a3551c5e44cd77ee2907beb959/: plot_batchnorm_animation.ipynb
_downloads/30116a8e813bf53e352deb3c0ae8c92c/: user_guide-2.py
_downloads/338a3d7895268d8c60986ca3d980fa74/: user_guide-1.py
_downloads/37632e9b080e370cc20b4ff2b757ec0e/: tutorial_01_spd_concepts.ipynb
_downloads/474e556e74a7e500ac0484d6378b111e/: moabb_hydra_benchmark.ipynb
_downloads/4cfc0884a36a2c69a91f9a9d947322f7/: plot_eegspdnet.ipynb
_downloads/4efe094dcfa18711de2cbe6d5d18801b/: spd_learn-modules-SPDBatchNormMeanVar-1.py
_downloads/530751fe0a374a62120d6c947372e096/: user_guide-8.py
_downloads/55d96617ef33f42f5ba2bde0bf08c83b/: user_guide-4.py
_downloads/5663112d13e238e57ac5d23efadeedd0/: plot_tsmnet_domain_adaptation.ipynb
_downloads/5facc68db7aa7c5a52d2bcaa2f3acd80/: plot_bimap_animation.py
_downloads/6fdbbe358e40a2012879377e25753f0b/: spd_learn-modules-TraceNorm-1.py
_downloads/78276c2ba4d9e2251422be277e1c3da5/: plot_spd_rpgd_attack.ipynb
_downloads/7c2ae098186a0446f9e26ec9af8da011/: user_guide-9.py
_downloads/85aec5b25f7334ee372f69c010a2bc6f/: plot_reeig_animation.ipynb
_downloads/8ee4bbb95e70ead790bb7dfd7eeb56aa/: spd_learn-modules-LogEig-1.py
_downloads/8f2523079a6d6fb86fc9dd81ea99e272/: plot_batchnorm_animation.py
_downloads/9eed8ee7e20bab3e8fe79bb418a568a9/: radar.ipynb
_downloads/ae88c5ee905c52633ed35d4e3dd9fbd3/: plot_benchmark_filterbank.py
_downloads/b1bd940e7a93dd04253a67db05f33a47/: tutorial_03_eeg_classification.ipynb
_downloads/b3e5bc4d54cf8d457b67287efb42b2c3/: spd_learn-modules-ReEig-1.py
_downloads/b58542f92329f036d623a63001615a6d/: plot_matt_attention.ipynb
_downloads/b90a7bfcf6cff0fe3a4af75d24251797/: plot_phase_spdnet.ipynb
_downloads/ba948c1b25cb50714e12db31709034d9/: tutorial_04_numerical_precision.ipynb
_downloads/bcff372483236b1cc4106799bab0f93f/: plot_logeig_animation.ipynb
_downloads/bd3f68a6f7d8c8553a418a6827c536a5/: spd_learn-modules-CovLayer-1.py
_downloads/c6074320d54beeb3b78afe332a59584e/: tutorial_02_building_blocks.py
_downloads/d1fe6433aba768d84440bba0ba219aa6/: plot_bimap_animation.ipynb
_downloads/d95aa9689f6fb3dd21fcdcf4b54e7853/: plot_benchmark_filterbank.ipynb
_downloads/d9d80526d6b98b1fc858c0d616ab605c/: plot_covlayer_animation.py
_downloads/ddbb53eb5bb1ced7c3837aa4df1227f8/: plot_parallel_transport.ipynb
_downloads/e21599dad74e1a446e597da53415224f/: user_guide-6.py
_static/: custom.css  generate_cone_background.py
background/: 1_scope_and_data.html  2_geometry_essentials.html  3_spdlearn_pipeline.html  index.html
docs/: Makefile  build_prod.sh  conftest.py
docs/source/: api.rst  (+14 more)
examples/: README.txt  results_parallelized.csv
spd_learn/: __init__.py  init.py  logging.py  version.py
tests/: conftest.py  constants.py  test_attacks.py  test_batchnorm.py  test_correctness.py  test_dropout.py  test_functional.py  test_integration.py  test_models.py  test_modules.py  test_numerical.py  test_pyriemann_comparison.py  test_transport.py
(+115 files in other folders)
